--- a/TNDStudios.Azure.FunctionApp.Security/FunctionApp1/FunctionApp1.csproj
+++ b/TNDStudios.Azure.FunctionApp.Security/FunctionApp1/FunctionApp1.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.5" />
   </ItemGroup>
   <ItemGroup>
